# SNAPBlue

./: .gitignore  .pre-commit-config.yaml  PE_001.yml  SNAPExportTools.py  SNAPStateMgr.py  blueUtils.py  defaultRedConfig.yml  environment.yml  maskUtils.py  override.yml  pixi.toml  pyproject.toml  reduceSNAP.py  testUtils.py  userScript.py
.github/workflows/: package.yml  package_pixi.yaml  unittest.yml
blueDocs/: SNAPStateMgr.md  _config.yml  _toc.yml  autoStateName.md  confirmIPTS.md  intro.md  reduce.md  setup.md
blueDocs/_build/.doctrees/: SNAPStateMgr.doctree  autoStateName.doctree  availableStates.doctree  blueUtils.doctree  checkCalibrationStatus.doctree  checkStateExists.doctree  confirmIPTS.doctree  createState.doctree  environment.pickle  exportData.doctree  indexStates.doctree  intro.doctree  printCalibrationHome.doctree  propagateDifcal.doctree  pullStateDict.doctree  reduce.doctree  setup.doctree  stateDef.doctree
blueDocs/_build/html/: .buildinfo  SNAPStateMgr.html  autoStateName.html  availableStates.html  blueUtils.html  checkCalibrationStatus.html  checkStateExists.html  confirmIPTS.html  createState.html  exportData.html  genindex.html  indexStates.html  intro.html  objects.inv  printCalibrationHome.html  propagateDifcal.html  pullStateDict.html  reduce.html  search.html  searchindex.js  setup.html  stateDef.html
blueDocs/_build/html/_sources/: availableStates.md  blueUtils.md  checkCalibrationStatus.md  createState.md  exportData.md  indexStates.md  intro.md  propagateDifcal.md  pullStateDict.md
conda.recipe/: meta.yaml
src/snapblue/: SNAPExportTools.py  blueUtils.py  confirm-snap  snapblue.py  userScript.py
tests/: test_version.py
